--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,15 +4,15 @@ androidx-junit = "1.2.1"
 core-ktx = "1.13.1"
 compose-animation = "1.6.8"
 espressoCore = "3.6.1"
-hiltVersion = "2.51.1"
-hiltCompiler = "1.2.0"
 hiltNavCompose = "1.2.0"
 junit = "4.13.2"
 kotlinx-collections-immutable = "0.3.7"
 lifecycle-runtime-ktx = "2.8.3"
 navVersion = "2.7.7"
-agp = "8.5.0"
-kotlin = "1.8.10"
+agp = "8.5.1"
+kotlin = "1.9.10"
+ksp = "1.9.10-1.0.13"
+hilt = "2.48.1"
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
@@ -28,9 +28,8 @@ androidx-test = { module = "androidx.test.ext:junit", version.ref = "androidx-ju
 androidx-compose-test = { module = "androidx.compose.ui:ui-test-junit4" }
 core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion" }
-hilt-androidx-kapt = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
-hilt-kapt = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltVersion" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-navigation = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavCompose" }
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx-collections-immutable" }
@@ -38,8 +37,11 @@ lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", v
 navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navVersion" }
 
 [plugins]
-jetbrains-kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
 [bundles]
 compose-ui = ["androidx-compose-ui-ui", "androidx-compose-ui-graphics", "androidx-compose-ui-tooling-preview", "androidx-compose-material3", "androidx-compose-animation-android"]
