feat: Move exercises and solutions to a new module (#6)

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,20 +1,25 @@
 [versions]
 activity-compose = "1.9.0"
 androidx-junit = "1.2.1"
+composeBomVersion = "2024.06.00"
 core-ktx = "1.13.1"
+compose-animation = "1.6.8"
 espressoCore = "3.6.1"
-hiltVersion = "2.51.1"
-hiltCompiler = "1.2.0"
 hiltNavCompose = "1.2.0"
 junit = "4.13.2"
 kotlinx-collections-immutable = "0.3.7"
 lifecycle-runtime-ktx = "2.8.3"
 navVersion = "2.7.7"
+agp = "8.5.1"
+kotlin = "2.0.0"
+ksp = "2.0.0-1.0.23"
+hilt = "2.51.1"
 
 [libraries]
 activity-compose = { module = "androidx.activity:activity-compose", version.ref = "activity-compose" }
 androidx-compose-lifecycleruntime = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycle-runtime-ktx" }
 androidx-compose-material3 = { module = "androidx.compose.material3:material3" }
+androidx-compose-animation-android = { module = "androidx.compose.animation:animation-android", version.ref = "compose-animation" }
 androidx-compose-ui-ui = { module = "androidx.compose.ui:ui" }
 androidx-compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
@@ -22,11 +27,11 @@ androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-ui-testmanifest = { module = "androidx.compose.ui:ui-test-manifest" }
 androidx-test = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-compose-test = { module = "androidx.compose.ui:ui-test-junit4" }
+compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
 core-ktx = { module = "androidx.core:core-ktx", version.ref = "core-ktx" }
 espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "espressoCore" }
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltVersion" }
-hilt-androidx-kapt = { module = "androidx.hilt:hilt-compiler", version.ref = "hiltCompiler" }
-hilt-kapt = { module = "com.google.dagger:hilt-compiler", version.ref = "hiltVersion" }
+hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hilt" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-navigation = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "hiltNavCompose" }
 junit = { module = "junit:junit", version.ref = "junit" }
 kotlinx-collections-immutable = { module = "org.jetbrains.kotlinx:kotlinx-collections-immutable", version.ref = "kotlinx-collections-immutable" }
@@ -34,6 +39,12 @@ lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", v
 navigation = { module = "androidx.navigation:navigation-compose", version.ref = "navVersion" }
 
 [plugins]
+android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
+compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
+kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+kotlin-ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+hilt-android = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
 [bundles]
-compose-ui = ["androidx-compose-ui-ui", "androidx-compose-ui-graphics", "androidx-compose-ui-tooling-preview", "androidx-compose-material3"]
+compose-ui = ["androidx-compose-ui-ui", "androidx-compose-ui-graphics", "androidx-compose-ui-tooling-preview", "androidx-compose-material3", "androidx-compose-animation-android"]
