--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -4,6 +4,7 @@ androidx-junit = "1.2.1"
 composeBomVersion = "2024.06.00"
 core-ktx = "1.13.1"
 compose-animation = "1.6.8"
+datastorePreferences = "1.1.1"
 espressoCore = "3.6.1"
 hiltNavCompose = "1.2.0"
 junit = "4.13.2"
@@ -25,6 +26,7 @@ androidx-compose-ui-graphics = { module = "androidx.compose.ui:ui-graphics" }
 androidx-compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 androidx-compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling" }
 androidx-compose-ui-testmanifest = { module = "androidx.compose.ui:ui-test-manifest" }
+androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-test = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
 androidx-compose-test = { module = "androidx.compose.ui:ui-test-junit4" }
 compose-bom = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
